public/css/styles.css
/* Coworking Around The World */
html {
  margin: 0;
  padding: 0;
}
html body {
  background: #2a3a4d;
  margin: 0;
  padding: 0;
  height: 100vh;
  overflow: hidden;
}
html body .top-side img {
  width: 50%;
}
html body #coordinator {
  position: fixed;
  left: 480px;
  top: 0px;
  padding: 16px 20px;
  background: rgba(42, 58, 77, 0.75);
  z-index: 9999;
}
html body #coordinator .left {
  float: left;
  text-align: center;
  margin-right: 15px;
}
html body #coordinator .left .border-wrapper {
  background: #32e4c5;
  /* Old browsers */
  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
  /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* IE10+ */
  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
  /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
  /* IE6-9 */
  width: 77px;
  height: 77px;
  overflow: hidden;
  text-align: center;
  border-radius: 50%;
  margin: 0 auto;
}
html body #coordinator .left img {
  border-radius: 50%;
  width: 75px;
  height: 75px;
  margin-top: 1px;
}
html body #coordinator .left a {
  text-decoration: underline;
  opacity: .6;
  transition: all 0.2s ease-in-out;
  font-size: 13px;
}
html body #coordinator .left a:hover {
  opacity: 1;
}
html body #coordinator .right {
  float: left;
  width:220px;
}
html body #coordinator .right h4 {
  font-weight: bold;
  color: #fff;
  text-transform: uppercase;
  margin-bottom: 0px;
  margin-top: 12px;
}
html body #coordinator .right a {
  color: #32e4c5;
}
html body p,
html body a,
html body h1,
html body h2,
html body h3,
html body h4,
html body h5,
html body h6,
html body span,
html body input {
  font-family: "brandon-grotesque", sans-serif;
  font-style: normal;
  font-weight: 400;
}
html body #cd-zoom-in {
  height: 32px;
  width: 32px;
  cursor: pointer;
  margin-left: 10px;
  background-color: #2a3a4d;
  line-height: 32px;
  text-align: center;
  margin-top: 15px;
  position: fixed;
  right: 15px;
}
html body #cd-zoom-in i {
  color: #fff;
  opacity: .75;
  font-size: 20px;
  transition: all 0.2s ease-in-out;
  line-height: 32px;
}
html body #cd-zoom-in i:hover {
  opacity: 1;
  color: #32e4c5;
}
html body #cd-zoom-out {
  height: 32px;
  width: 32px;
  cursor: pointer;
  margin-left: 10px;
  background-color: #2a3a4d;
  line-height: 32px;
  text-align: center;
  position: fixed;
  right: 15px;
  margin-top: 50px;
}
html body #cd-zoom-out i {
  color: #fff;
  opacity: .75;
  line-height: 32px;
  font-size: 20px;
  transition: all 0.2s ease-in-out;
}
html body #cd-zoom-out i:hover {
  opacity: 1;
  color: #32e4c5;
}
html a {
  color: #fff;
  text-decoration: none;
}
html a i {
  margin-right: 8px;
}
html aside {
  background: #2a3a4d;
  height: 100vh;
  width: 480px;
  overflow: scroll;
  float: left;
}
html aside .side-padding {
  padding: 30px 60px;
  width: auto;
  position: relative;
}
html aside .back {
  margin: 30px auto;
}
html aside .back a {
  font-weight: 300;
  font-size: 12px;
}
html aside .city h1 {
  font-weight: 400;
  text-transform: uppercase;
  color: #fff;
  font-size: 3em;
  margin-top: 0px;
  line-height: 100%;
  letter-spacing: .1em;
  margin-bottom: 15px;
}
html aside .search {
  height: 50px;
  background: #32e4c5;
  /* Old browsers */
  background: -moz-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32e4c5), color-stop(100%, #6c86c7));
  /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #32e4c5 0%, #6c86c7 100%);
  /* IE10+ */
  background: linear-gradient(to bottom, #32e4c5 0%, #6c86c7 100%);
  /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32e4c5', endColorstr='#6c86c7', GradientType=0);
  /* IE6-9 */
  padding: 1px;
  width: 100%;
  position: relative;
}
html aside .search input {
  width: 100%;
  height: 100%;
  background: #2a3a4d;
  color: #fff;
  padding-left: 14px;
  border: 0px;
  outline: none;
  font-size: 1em;
  font-weight: 300;
}
html aside .search .search-icon {
  position: absolute;
  right: 15px;
  top: 25%;
}
html aside .search .search-icon i {
  color: #fff;
  font-weight: 100;
  font-size: 24px;
}
html aside hr {
  border-color: #556171;
}
html aside ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}
html aside ul li {
  color: #fff;
  margin-bottom: 30px;
  font-size: .8em;
}
html aside ul li a {
  color: #32e4c5;
  font-size: 1.2em;
  text-transform: uppercase;
  display: block;
}
html aside ul li img {
  height: 28px;
  margin-right: 12px;
  float: left;
}
html #main {
  width: 100%;
  background: #f1f1f1;
  height: 100vh;
}
html #main #cd-google-map,
html #main #google-container {
  height: 100vh;
}

@media all and (min-width: 768px) and (max-width: 1023px) {
  html body.active aside {
    width: 75%;
  }
  html body.active #coordinator {
    left: 78%;
    top: 15px;
    transition: all 0.2s ease-in-out;
    opacity: .1;
  }
  html body aside {
    width: 0px;
    transition: all 0.2s ease-in-out;
  }
  html body #menu-toggle {
    display: block;
    position: fixed;
    left: 15px;
    top: 15px;
    z-index: 9999;
    font-size: 2rem;
    background: #2a3a4d;
    color: #fff;
    padding: 15px;
  }
  html body #coordinator {
    left: 15px;
    bottom: 15px;
    top: auto;
  }
}
@media all and (min-width: 0px) and (max-width: 767px) {
  html body.active aside {
    width: 100% !important;
  }
  html body.active #cities-aside {
    display: block;
  }
  html body.active #menu-toggle {
    top: 5px !important;
    background: transparent;
  }
  html body.active #coordinator {
    left: 78%;
    top: 15px;
    transition: all 0.2s ease-in-out;
    opacity: 0;
  }
  html body aside {
    width: 0px;
    transition: all 0.2s ease-in-out;
  }
  html body aside .side-padding {
    padding: 15px 30px;
  }
  html body aside ul li {
    font-size: 12px;
  }
  html body .logo {
    text-align: center;
  }
  html body #menu-toggle {
    display: block;
    position: fixed;
    left: 15px;
    top: 15px;
    z-index: 9999;
    font-size: 2rem;
    background: #2a3a4d;
    color: #fff;
    padding: 15px;
  }
  html body #coordinator {
    left: 0px;
    bottom: 0px;
    top: auto;
    width: 100%;
  }
}
@media all and (min-width: 0px) and (max-width: 320px) {
  html body.active aside {
    width: 100%;
  }
  html body.active #coordinator {
    left: 78%;
    top: 15px;
    transition: all 0.2s ease-in-out;
    opacity: 0;
  }
  html body.active #menu-toggle {
    top: 5px !important;
    background: transparent;
  }
  html body aside {
    width: 0px;
    transition: all 0.2s ease-in-out;
  }
  html body aside .side-padding {
    padding: 15px 30px;
  }
  html body aside ul li {
    font-size: 12px;
  }
  html body .logo {
    text-align: center;
  }
  html body #menu-toggle {
    display: block;
    position: fixed;
    left: 15px;
    top: 15px;
    z-index: 9999;
    font-size: 2rem;
    background: #2a3a4d;
    color: #fff;
    padding: 15px;
  }
  html body #coordinator {
    left: 0px;
    bottom: 0px;
    top: auto;
    width: 100%;
  }
}

@media (max-width: 375px) {
  #cities-aside { display: none; }
}

